# CMTomatoClock

./: .gitignore  CBuild.sh  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: ansicolor_sink-inl.h.836ECFE2F1D4EC9A.idx  ansicolor_sink.h.6E6D5189A47CBFDC.idx  backtracer-inl.h.8F0B1FF603E68D85.idx  backtracer.h.A66541EFA434F01A.idx  base.h.236FA9E269804549.idx  base_sink-inl.h.CF6ADC7656EB2364.idx  base_sink.h.6A33BEE90D7DB896.idx  basic_file_sink-inl.h.BD467423B3DBF385.idx  basic_file_sink.h.25181D5BE898F6AB.idx  circular_q.h.9964D3682CBC3114.idx  cms_utils.cpp.201AF056EE7BB4E0.idx  cms_utils.h.FA76ADEC3E9AEA8D.idx  cms_utils.hpp.DC7BBC211632F481.idx  common-inl.h.004E865277CD4A4B.idx  common.h.2FF3AB21F34B83AE.idx  console_globals.h.EEF47DD7EE108DDB.idx  file_helper-inl.h.864B11A1C56A7525.idx  file_helper.h.8CBB1511AE04399B.idx  fmt.h.127E5868BE82810B.idx  fmt_helper.h.1CAF3F5A6CC4C661.idx  format-inl.h.45CF7F1DB1EC151C.idx  format.h.ECAED06FCF6CFA28.idx  formatter.h.D3EFE995E2DD84E3.idx  log_msg-inl.h.ED85AC4B88D8E5D5.idx  log_msg.h.46BD2CB199484038.idx  log_msg_buffer-inl.h.8AE7D4C57237C319.idx  log_msg_buffer.h.FCA7C0D854E98F6F.idx  logger-inl.h.34BCC2EC8E4268C5.idx  logger.h.E65C7CC83A50B0D5.idx  main.cpp.F13117345D130BC5.idx  mdc.h.8AA274C22AAA78B6.idx  null_mutex.h.D9579EE5B0467AE8.idx  os-inl.h.A20EFDC503C8A7F8.idx  os.h.7385695D6B429F28.idx  pattern_formatter-inl.h.5D51749ADADB359B.idx  pattern_formatter.h.2DCFDD39B9DE8CD3.idx  periodic_worker-inl.h.EE422400DE13567F.idx  (+12 more)
include/cms/: cms_utils.hpp
src/: main.cpp
